--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <title>Blog</title>
+    <title>{{ TITLE }}</title>
 </head>
 <body>
 {% block body %}
