--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-<p1>hello</p1>
+{% for posts in post_list: %}
+Lorem Ipsum
+{% endfor %}
 {% endblock %}
