--- a/templates/register.html
+++ b/templates/register.html
@@ -4,12 +4,15 @@
     <label for="username">Kullanıcı adı:</label><br>
     <input type="text" id="username" name="username"><br><br>
 
+    <label for="email">Email</label><br>
+    <input type="text" id="email" name="email"><br><br>
+
     <label for="password">Şifre:</label><br>
     <input type="text" id="password" name="password"><br><br>
 
     <label for="password2">Şifre:</label><br>
     <input type="text" id="password2" name="password2"><br>
 
-    <button id="submit">Giriş yap</button><br><br>
+    <button id="submit">Kayıt yap</button><br><br>
 </form>
 {% endblock %}
