--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block body %}
-{% for posts in post_list: %}
-Lorem Ipsum
-{% endfor %}
+<a href="/register">Kayıt OL</a>
+<a href="/login">Giriş Yap</a>
+<a href="/post">Blog Oluştur</a>
+<a href="/profile">Profil</a>
+
 {% endblock %}
