basit bir css eklendi

--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
     <input type="text" id="password" name="password"><br><br>
 
     <label for="password2">Şifre:</label><br>
-    <input type="text" id="password2" name="password2"><br>
+    <input type="text" id="password2" name="password2"><br><br>
 
     <button id="submit">Kayıt yap</button><br><br>
 </form>
