--- a/static/style.css
+++ b/static/style.css
@@ -3,3 +3,12 @@ body {
   background-color: #333333;
   text-align: center;
 }
+a:link {
+    color: turquoise;
+}
+a:visited {
+    color: greenyellow;
+}
+a:hover {
+    color: blueviolet;
+}
