--- a/templates/post.html
+++ b/templates/post.html
@@ -2,9 +2,9 @@
 {% block body %}
 <form method="POST" action="/post">
     <label for="title">Başlık</label><br>
-    <input type="text" id="title" name="title"><br>
+    <input type="text" id="title" name="title" placeholder="{{ title }}"><br>
     <label for="content" >Merhaba {{ user }}</label><br>
-    <textarea id="content" name="content"></textarea><br>
-    <button id="submit">Paylaş</button>
+    <textarea id="content" name="content" placeholder="{{ content }}"></textarea><br>
+    <button type="submit" id="submit" name="submit">Paylaş</button>
 </form>
 {% endblock %}
