--- a/templates/show_post.html
+++ b/templates/show_post.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block body %}
 <h1>{{ post.title }}</h1>
-<pre>{{ post.content }}</pre>
+{{ post.content | safe }}
 {% endblock %}
