--- a/templates/show_post.html
+++ b/templates/show_post.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block body %}
-<h1>{{ post.title }}</h1>
+<h1 style="text-align: center">{{ post.title }}</h1>
 {{ post.content | safe }}
 {% endblock %}
