--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,10 @@
-body {
-    color: #F8F8F8;
+/*body {
+   color: #F8F8F8;
     background-color: #333333;
     text-align: center;
     overflow-wrap: break-word;
 }
+
 a:link {
     color: turquoise;
 }
@@ -13,3 +14,4 @@ a:visited {
 a:hover {
     color: blueviolet;
 }
+*/
