--- a/templates/login.html
+++ b/templates/login.html
@@ -2,11 +2,11 @@
 {% block body %}
 <form method="POST" action="/login">
     <label for="username">Kullanıcı adı:</label><br>
-    <input type="text" id="username" name="username"><br><br>
+    <input type="text" id="username" name="username" class="form-control"><br>
 
     <label for="password">Şifre:</label><br>
-    <input type="text" id="password" name="password"><br>
-    <button id="submit">Giriş yap</button><br><br>
+    <input type="text" id="password" name="password" class="form-control"><br>
+    <button id="submit" class="btn btn-outline-dark">Giriş yap</button><br>
 </form>
 {% endblock %}
 
