--- a/templates/post.html
+++ b/templates/post.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 {% block body %}
-<form method="POST" action="/post">
-    <label for="title">Başlık</label><br>
-    <input type="text" id="title" name="title" placeholder="{{ title }}"><br>
-    <label for="content" >Merhaba {{ user }}</label><br>
-    <textarea id="content" name="content" placeholder="{{ content }}"></textarea><br>
-    <button type="submit" id="submit" name="submit">Paylaş</button>
-</form>
+<div class="row justify-content-center  ">
+    <div class="col-sm-10 col-md-8 col-lg-6">
+        <form method="POST" action="/post">
+            <div >
+            <label for="title" class="form-label">Başlık</label><br>
+            <input type="text" id="title" name="title" placeholder="{{ title }}" class="form-control"><br>
+            <label for="content" class="form-label">İçerik</label><br>
+            <textarea id="content" name="content" placeholder="{{ content }}" class="form-control"></textarea><br>
+            <button type="submit" id="submit" name="submit" class="btn btn-outline-dark">Paylaş</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
