--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,17 +1,5 @@
 {% extends 'base.html' %}
 {% block body %}
 <h1>{{ username }}</h1>
-{% if admin %}
-<form method="POST" style="display:inline">
-    <button type="submit" name="delete_user" value="{{ username }}">Sil</button>
-</form><br><br><br>
-{% endif %}
-{% for post in posts %}
-<a href="/post/{{ post.id }}"> {{ post.title }}</a>
-{% if admin %}
-<form method="POST" style="display:inline">
-    <button type="submit" name="delete" value="{{ post.id }}">Sil</button>
-</form><br>
-{% endif %}
-{% endfor %}
+{% include 'post_list.html' %}
 {% endblock %}
