bootstrap düzeltmeleri ve silme butonu düzeltildi

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-{% include 'post_list.html' %}
+<div class="container">
+    {% include 'post_list.html' %}
+</div>
 {% endblock %}
