--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,8 +21,8 @@
       <li><button type="submit" class="dropdown-item; btn btn-outline-dark">Şifre Değiştir</button></li>
     </form>
     <li><h5 class="dropdown-header">kullanıcı silme</h5></li>
-    <form method="POST">
-    <li><button type="submit" name="delete_user" class="dropdown-item; btn btn-outline-dark">Sil</button></li>
+    <form method="POST" action="/delete_user/">
+    <li><button type="submit" name="delete_user" value="{{ user.id }}" class="dropdown-item; btn btn-outline-dark">Sil</button></li>
     </form>
     </ul>
 </div>
