--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
         <label for="username">Kullanıcı adı:</label><br>
         <input type="text" id="username" name="username" class="form-control"><br>
         <label for="password">Şifre:</label><br>
-        <input type="text" id="password" name="password" class="form-control"><br>
+        <input type="password" id="password" name="password" class="form-control"><br>
         <button id="submit" class="btn btn-outline-dark">Giriş yap</button><br>
     </form>
 </div>
