--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col text-end">
                 <div>
-                    <small>By: </small><a href="/post/{{ post.id }}">{{ post.author.username }}</a>
+                    <small>By: </small><a href="/profile/{{ post.author.id }}">{{ post.author.username }}</a>
                 </div>
 
             </div>
