--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -7,9 +7,8 @@
             </div>
             <div class="col text-end">
                 <div>
-                    <small>By: </small><a href="/profile/{{ post.author.id }}">{{ post.author.username }}</a>
+                    <small>Yazar: </small><a href="/profile/{{ post.author.id }}">{{ post.author.username }}</a>
                 </div>
-
             </div>
         </div>
         <div class="row">
