--- a/templates/post.html
+++ b/templates/post.html
@@ -13,6 +13,8 @@
                 <div id="editor">
                     <p></p>
                 </div>
+                <label for="tags">Etiketler</label>
+                <input type="text" name="tags" id="tags" placeholder="örnek: bilim, bilgisayar" class="form-control">
                 <button type="submit" id="submit" name="submit" class="btn btn-outline-dark">Paylaş</button>
                 <script src="https://cdn.jsdelivr.net/npm/quill@2/dist/quill.js"></script>
                 <script src="/static/quill.js"></script>
