--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -21,7 +21,7 @@
                 </button>
                 <ul class="dropdown-menu">
                 <li>
-                    <form method="POST" action="/delete_post/">
+                    <form method="POST" action="/delete_post">
                         <button type="submit" name="delete_post" value="{{ post.id }}" class="dropdown-item">Sil</button>
                     </form>
                 </li>
