--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block body %}
 <div class="container">
-    <h1>{{ user.username }}</h1>
+    <br><h1><img src="/{{ current_user.profile_pic_path }}" style="width:128px;height:128px;">{{ user.username }}</h1>
+
      <div class="dropdown; text-end">
   <button type="button" class="btn btn-outline-dark dropdown-toggle" data-bs-toggle="dropdown">
     Ayarlar
@@ -26,6 +27,12 @@
     <form method="POST" action="/delete_user">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <li><button type="submit" name="delete_user" value="{{ user.id }}" class="dropdown-item; btn btn-outline-dark">Sil</button></li>
+    </form>
+    <li><h5 class="dropdown-header">profil fotografı değişttirme</h5></li>
+    <form hx-post="/profilepicture" hx-encoding="multipart/form-data">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <li><input type="file" name="file" accept="image/png, image/jpeg"/></li>
+        <li><button type="submit"></button></li>
     </form>
     </ul>
 </div>
