profil sayfası ve blog silme iyileştirmeleri

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-<div class="container">
+<div id="post-view" class="container">
     {% include 'post_list.html' %}
 </div>
 {% endblock %}
