--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <main>
     {% block body %}
     {% endblock %}
-    <div class="row position-fixed bottom-0">
+    <div class="row position-fixed bottom-0 end-0">
         <div class="col-auto">
             <div id="status" class="list-group">
                 <script>
