--- a/templates/profile.html
+++ b/templates/profile.html
@@ -36,6 +36,8 @@
     </form>
     </ul>
 </div>
-    {% include "post_list.html" %}
+    <div id="post-view">
+        {% include 'post_list.html' %}
+    </div>
 </div>
 {% endblock %}
