--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block body %}
 <div id="post-view" class="container">
+    <div id="post-list" class="list-group">
     {% include 'post_list.html' %}
+    </div>
 </div>
 {% endblock %}
